Ultimos avances hasta marzo

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,50 +1,283 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<% provide(:page_title, "Nueva Cuenta ") %>
+<% provide(:blog_active, 'active') %>
 
 
-   <div class="field">
-   <%= f.label :nombre %><br />
-    <%= f.text_field :nombre %>
-  </div>
 
-  <div class="field">
-   <%= f.label :fono %><br />
-    <%= f.text_field :fono %>
-  </div>
 
-  <div class="field">
-   <%= f.label :region %><br />
-    <%= f.text_field :region %>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
 
-  <div class="field">
-   <%= f.label :comuna %><br />
-    <%= f.text_field :comuna %>
-  </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+<style>
 
-<%= render "devise/shared/links" %>
+body{
+    background-color:#767676;
+
+  
+
+}
+
+.register-form{
+      font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 18px;
+   left: 50%;
+    top: 75%;
+    position: absolute;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+    -moz-transform: translate3d(-50%, -50%, 0);
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.regbutton{    
+    height: 50px;
+    width: 200px;
+    background-color:tomato;
+    border-radius: 0px;
+    font-size: 18px;
+    color:white;
+    border: none !important;
+    margin-bottom: 5px;
+}
+.regbutton:hover{    
+    color: white;
+    background-color:#aa422f;
+}
+.regbutton:active{    
+    color: white;
+    background-color:#aa422f;
+}
+.logbutton{    
+    height: 50px;
+    width: 200px;
+    background-color:yellowgreen;
+    border-radius: 0px;
+    font-size: 18px;
+    color:white;
+    border: none !important;
+    margin-bottom: 5px;
+}
+.logbutton:hover{    
+    color: white;
+    background-color:darkolivegreen;
+}
+.logbutton:active{    
+    color: white;
+    background-color:darkolivegreen;
+}
+
+
+
+.register-form label{
+    color: aliceblue;
+    
+}
+.register-form input{
+    margin-bottom: 5px;
+    width: 430px;
+    height: 40px;
+    border-radius: 0px;
+}
+
+
+/*/////////////////// */
+
+
+blockquote{
+    border-left:none
+}
+
+.quote-badge{
+    background-color: rgba(0, 0, 0, 0.2);   
+}
+
+.quote-box{
+    
+    overflow: hidden;
+    margin-top: -50px;
+    padding-top: -100px;
+    border-radius: 17px;
+    background-color: #B5B5B5;
+    margin-top: 25px;
+    color:white;
+    width: 325px;
+    box-shadow: 2px 2px 2px 2px #E0E0E0;
+    
+}
+
+.quotation-mark{
+    
+    margin-top: -10px;
+    font-weight: bold;
+    font-size:100px;
+    color:white;
+    
+     font-family: 'Open Sans Condensed', sans-serif;
+    
+}
+
+.quote-text{
+    
+    font-size: 19px;
+    margin-top: -65px;
+}
+
+
+
+
+
+</style>
+
+ 
+ 
+
+
+    </head>
+
+
+
+
+
+    <body>
+
+ 
+
+
+<div class="container">
+<div class="container-fluid">
+     <div class="register-form"> 
+      <div class="row">     
+    
+
+           <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+
+              <label for="firstName">NOMBRE</label>
+                   
+                    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %> 
+             
+               <%= f.text_field :nombre , class:"form-control" %> 
+           </div>            
+      </div>
+
+      <div class="row">
+           <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+              <label for="email">REGION</label>
+               <%= f.text_field :region , class:"form-control" %>            
+           </div>            
+      </div>
+
+       <div class="row">
+           <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+              <label for="email">COMUNA</label>
+               <%= f.text_field :comuna , class:"form-control" %>            
+           </div>            
+      </div>
+
+      <div class="row">
+           <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+              <label for="email">TELEFONO</label>
+               <%= f.text_field :fono , class:"form-control" %>            
+           </div>            
+      </div>
+
+
+
+
+      <div class="row">
+           <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+              <label for="email">EMAIL</label>
+               <%= f.email_field :email, autofocus: true, class:"form-control" %>          
+           </div>            
+      </div>
+      <div class="row">
+           <div class="col-md-8 col-md-offset-5 ">
+              <label for="password">PASSWORD (6 Caracteres minimo)</label>
+             
+             <%= f.password_field :password, autocomplete: "off", class:"form-control" %>            
+           </div>            
+      </div>
+
+
+      <div class="row">
+           <div class="col-md-20 col-sm-4 col-lg-4 col-md-offset-5">
+              <label for="email">CONFIRMACION </label>
+               <%= f.password_field :password_confirmation, autocomplete: "off" , class:"form-control" %>          
+           </div>            
+      </div>
+      <hr>
+      <div class="row">
+           <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 col-md-offset-5">
+        
+           <%= f.submit "Registrarse" , class:"btn btn-default logbutton" %>
+           
+          </div>
+         
+         <%= render "devise/shared/links" %>
+    </div>
+</div>
+
+</div>
+    
+
+
+
+<%end%>
+
+
+
+
+
+ 
+<div class="container">
+    <blockquote class="quote-box">
+      </br>
+      </br>
+      </br>
+      <p class="quotation-mark">
+        
+      </p>
+    </br>
+      <p class="quote-text">
+        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Crear tu cuenta es  gratis
+      </p>
+      
+    </br>
+  </br>
+</br>
+      <p class="quote-text">    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 
+        Tendras acceso a tu perfil
+      </p>
+
+         </br>
+  </br>
+</br>
+ <p class="quote-text">
+       <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Podras administrar tus avisos
+      </p>
+
+
+
+
+
+      <hr>
+      <div class="blog-post-actions">
+        <p class="blog-post-bottom pull-left">
+         
+        </p>
+       
+      </div>
+    </blockquote>
+</div>
+
+
+
+
+
+
+</body>
+</html>
