--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,6 +25,7 @@
               <ul class="nav1 nav">
                 <li ><%= link_to "HOME", root_path %></li>
                 <li ><%= link_to "BUSCAR AVISO", publications_path %></li>
+                <li ><%= link_to "CREAR AVISO", new_publication_path %></li>
                 
 
                 <%if user_signed_in? %>
@@ -43,9 +44,11 @@
 
 
                 <%end%>
+
+                 <li ><%= link_to "NOSOTROS", about_path %></li>
                   
-                <li><a href="#about" class="scroll" data-hover="About">NOSOTROS</a></li>
-                <li><a href="#agents" class="scroll" data-hover="Agents">CONTACTO</a></li> 
+    
+            
         
               </ul>
 
