--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -10,6 +10,16 @@
 
 
 
+
+
+
+
+       
+
+       </br>
+   </br>
+
+             
 <%= form_for publication, html: { multipart: true } do |f| %>
   <% if publication.errors.any? %>
     <div id="error_explanation">
@@ -22,138 +32,227 @@
       </ul>
     </div>
   <% end %>
-
-
-<div class="container">
-<div class="col-md-5 ">
-    <div class="form-area">  
-        <form role="form">
-        <br style="clear:both">
-                    <h3 style="margin-bottom: 25px; text-align: center;"></h3>
-            <div class="form-group">
-               
-                
-         
-          </div>
-             
-
        
-        </form>
-    </div>
-</div>
-</div>
-
-
 
 
 
 
 
 <div class="container">
-  <div class="row">
-    <form class="form-horizontal">
-            <fieldset>
+
+    
+  
+  
+  
+      
                 <!-- Form Name -->
                 <legend>Nueva Publicacion</legend>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="textinput">Titulo Publicacion</label>
-                    <div class="col-md-5">
+
+
+            <div class="row">
+                
+                <div class="col-xs-6">
+                    <label >Titulo</label>
+        
                         <%= f.text_field :titulo ,class: 'form-control' , placeholder: 'Titulo'  %>
-                    </div>
+                    
                 </div>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="color">Imagen</label>
-                    <div class="col-md-6">
+
+           </div>
+
+            
+
+            </br>
+            
+             
+              
+                 <div class="row">
+
+                <div class="col-xs-6">
+                    <label >Imagen</label>
+                   
                    
               <%= f.file_field :image %>
-                    </div>
-                </div>
-                <!-- Appended Input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="account">Region</label>
-                    <div class="col-md-4">
+              </div>
+               
+               </div>
+
+           
+
+                </br>
+             
+              
+
+
+
+
+
+
+
+              <div class="row">
+
+              
+                <div class="col-xs-3">
+                    <label>Region</label>
+                
                          <%= f.select(:region, options_for_select([['Metropolitana', 'Metropolitana']]),{} , { 'data-width' => "50%", class: "selectpicker show-tick"} ) %>
 
-                    </div>
+                
                 </div>
-                <!-- Appended Input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="apikey">Comuna</label>
-                    <div class="col-md-3">
+
+
+          
+
+
+           
+                <div class="col-xs-3">
+                    <label >Comuna &nbsp; </label>
+                    
                         <%= f.select(:comuna, options_for_select([['Macul', 'Macul'], ['San Bernardo', 'San Bernardo'],['Nuñoa', 'Nuñoa']]),{} , {class: 'selectpicker' ,data: {"live-search": true}} ) %>
 
-                    </div>
+                   
                 </div>
-                <!-- Multiple Checkboxes (inline) -->
            
-                <!-- Select Basic -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="threshold">Tipo</label>
-                    <div class="col-md-2">
+               
+         </div>
+
+
+
+
+
+
+
+
+                     
+             
+
+        
+              <div class="row">
+
+              
+                <div class="col-xs-1">
+               
+            
+                    <label>Tipo &nbsp;</label>
+                   
                         <%= f.select(:tipo, options_for_select([['Casa', 'Casa'], ['Departamento', 'Departamento'],['Parcela', 'Parcela']]),{} , {class: 'selectpicker show-tick'}) %>
                     </div>
-                </div>
-                <!-- Select Basic -->
-                <div class="form-group">
 
-                    <label class="col-md-4 control-label" for="comparison"> Precio </label>
-                    <div class="col-md-4">
+                      <div class="col-xs-1">
+                     </div>
+              
+                </div>
+
+
+
+
+               </br>
+             
+              
+
+             <div class="row">
+
+                 <div class="col-xs-2">
+
+
+
+                    <label> Precio  </label>
+
+
+                   
 
                         <%= f.text_field :precio ,class: 'form-control' , placeholder: 'Precio'  %> 
                     </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="thresholdvalue">Superficie</label>
-                    <div class="col-md-4">
+
+                     <div class="col-xs-1">
+                     </div>
+              
+
+              
+                <div class="col-xs-2">
+                    <label >Superficie</label>
+                   
                         <%= f.text_field :superficie ,class: 'form-control' , placeholder: 'Superficie' + ' Mt2'%> 
                 </div>
               </div>
-                <!-- Select Basic -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="notifymode">Dormitorios</label>
-                    <div class="col-md-3">
+
+
+
+
+
+                   </br>
+             
+
+              
+              <div class="row">
+                <div class="col-xs-3">
+                    <label >Dormitorios</label>
+             
                          <%= f.select(:dormitorio, options_for_select([['1 dormitorio', '1'], ['2 dormitorios', '2'],['3 dormitorios', '3'],['4 o mas dormitorios', '4']]),{} , {class: 'selectpicker show-tick'} ) %>
                     </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="email">Baños</label>
-                    <div class="col-md-3">
+                
+           
+            
+
+              
+                <div class="col-xs-3">
+                    <label>Baños</label>
+                    
                          <%= f.select(:baño, options_for_select([['1 baño', '1 baño'], ['2 baños', '2'],['3 baños', '3'],['4 o mas baños', '4']]),{} , {class: 'selectpicker show-tick'} ) %>
-                    </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="sms">Estacionamientos</label>
-                    <div class="col-md-3">
-                        <%= f.select(:estacionamiento, options_for_select([['1 estacionamiento', '1'], ['2 estacionamientos', '2'],['3 o mas estacionamientos', '3'],['No tiene', '0']]),{} , {class: 'selectpicker show-tick'} ) %>
-                    </div>
+                  
                 </div>
 
+            </div>
+               
+
+                      </br>
+          
+
+               <div class="row">
+
+              
+                <div class="col-xs-3">
+                    <label>Estacionamientos</label>
+
+                  
+                        <%= f.select(:estacionamiento, options_for_select([['1 estacionamiento', '1'], ['2 estacionamientos', '2'],['3 o mas estacionamientos', '3'],['No tiene', '0']]),{} , {class: 'selectpicker show-tick'} ) %>
+                    
+                </div>
+            </div>
+
+
+
+                       </br>
+              </br>
+              
+
+              <div class="row">
+
                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="email">Descripcion</label>
+                    <label class="col-md-1 control-label" for="email">Descripcion</label>
                     <div class="col-md-6">
                         <%= f.text_area :descripcion ,class: 'form-control' , placeholder: 'Descripcion'  %> 
                     </div>
                 </div>
-                <!-- Multiple Radios (inline) -->
-                
-                <!-- Multiple Radios (inline) -->
-                
-                <!-- Multiple Checkboxes (inline) -->
-                
-                <!-- Button (Double) -->
+             
+                    </br>
+
+                </div>
+              </br>
+              </br>
+              </br>
+
+              
+
                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="submitButton"></label>
-                    <div class="col-md-6">
-                        <%= f.submit 'Crear Aviso', class: 'btn btn-primary pull-right' %>
+                   
+                    <div class="col-md-4">
+                        <%= f.submit 'Crear Aviso', class: 'btn btn-primary pull-right col-md-6' %>
                     </div>
                 </div>
-            </fieldset>
-        </form>
+        
+        
+       
   </div>
 </div>
 
@@ -176,3 +275,4 @@
 
 
 </html>
+
