--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,7 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+<% provide(:page_title, 'Inicio') %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,6 +81,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
     </div>
 </div>     
 <div class="container">
+
+
 
 
  
