--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -22,6 +22,13 @@ ul{
 	margin:0;
 	padding:0;
 }
+
+.regisfloat{
+  float: left;
+}
+
+
+
 .w3ls-banner{ 
 	background:url("Santiago-panorama.jpg")no-repeat 0px 0px;
 	background-size: cover;
