Avance vistas , buscador , panel de control

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
 
                 <%if current_user.is_admin? %>
 
-              <li ><%= link_to "PANEL DE CONTROL", root_path %></li>
+              <li ><%= link_to "PANEL DE CONTROL", indexadmin_path %></li>
 
 
               <%end%>
