--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -34,9 +34,9 @@
   <% end %>
        
 
+<div class="col-md-8">
 
-
-
+<div class="well well-sm">
 
 <div class="container">
 
@@ -46,7 +46,10 @@
   
       
                 <!-- Form Name -->
+                <div class="col-md-7">
+
                 <legend>Nueva Publicacion</legend>
+              </div>
 
 
             <div class="row">
@@ -92,8 +95,8 @@
               <div class="row">
 
               
-                <div class="col-xs-3">
-                    <label>Region</label>
+                <div class="col-md-3">
+                    <label>Region &nbsp;</label>
                 
                          <%= f.select(:region, options_for_select([['Metropolitana', 'Metropolitana']]),{} , { 'data-width' => "50%", class: "selectpicker show-tick"} ) %>
 
@@ -115,12 +118,6 @@
            
                
          </div>
-
-
-
-
-
-
 
 
                      
@@ -254,6 +251,9 @@
         
        
   </div>
+</div>
+</div>
+
 </div>
 
 
