--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,11 +1,366 @@
 </br>
 
 
+<!DOCTYPE html>
+<html>
+  <head>
+
+
+  	<style>
+
+  	/**** BASE ****/
+body {
+    color: #888;   
+}
+a {
+    color: #03a1d1;
+    text-decoration: none!important;
+}
+
+/**** LAYOUT ****/
+.list-inline>li {
+    padding: 0 10px 0 0;
+}
+.container-pad {
+    padding: 30px 15px;
+}
+
+
+.sales {
+    background: #ffffff none repeat scroll 0 0;
+    border: 1px solid #d4d9e3;
+    display: inline-block;
+    padding: 15px;
+    width: 100%;
+}
+.sales button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: 1px solid #dadee7;
+    border-radius: 100px;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    padding-right: 32px;
+    color: #787878;
+}
+
+.sales button::before {
+    content: "";
+    font-family: FontAwesome;
+    position: absolute;
+    right: 12px;
+    top: 11px;
+}
+.sales  .btn-group {
+    float: right;
+}
+.sales h2 {
+    color: #8492af;
+    float: left;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0;
+    padding: 9px 0 0;
+}
+.btn.btn-secondary.btn-lg.dropdown-toggle > span {
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+.sales .dropdown-menu{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    border-radius: 8px;
+    width: 100%;
+    color: #787878;
+}
+.sales .btn-group.open .dropdown-toggle, .btn.active, .btn:active{
+    box-shadow: none;
+}
+.sales .dropdown-menu > a {
+    color: #787878;
+    display: inline-block;
+    font-weight: 800;
+    padding: 9px 0;
+    text-align: center;
+    width: 100%;
+}
+#my-cool-chart svg {
+    width: 100%;
+}
+.sales .dropdown-menu > a:hover{
+    color: #5584FF;   
+}
+
+
+/**** MODULE ****/
+.bgc-fff {
+    background-color: #fff!important;
+}
+.box-shad {
+    -webkit-box-shadow: 1px 1px 0 rgba(0,0,0,.2);
+    box-shadow: 1px 1px 0 rgba(0,0,0,.2);
+}
+.brdr {
+    border: 1px solid #ededed;
+}
+
+/* Font changes */
+.fnt-smaller {
+    font-size: .9em;
+}
+.fnt-lighter {
+    color: #bbb;
+}
+
+/* Padding - Margins */
+.pad-10 {
+    padding: 10px!important;
+}
+.mrg-0 {
+    margin: 0!important;
+}
+.btm-mrg-10 {
+    margin-bottom: 10px!important;
+}
+.btm-mrg-20 {
+    margin-bottom: 20px!important;
+}
+
+/* Color  */
+.clr-535353 {
+    color: #535353;
+}
+
+
+
+
+/**** MEDIA QUERIES ****/
+@media only screen and (max-width: 991px) {
+    #property-listings .property-listing {
+        padding: 5px!important;
+    }
+    #property-listings .property-listing a {
+        margin: 0;
+    }
+    #property-listings .property-listing .media-body {
+        padding: 10px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    #property-listings .property-listing img {
+        max-width: 180px;
+    }
+}
+
+  	</style>
+
+  	</head>
+
+
+  	<body>
+
+
+<div class="col-md-3 ">
+
+<%= search_form_for @q do |f| %>
+
+  		<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-6 col-md-offset-3 col-lg-offset-0">
+      <div class="well">
+      <h3 align="center">Buscador</h3>
+        <form class="form-horizontal">
+          <div class="form-group">
+        
+              <%= f.label :titulo_cont , "Palabra clave" %>
+            <%= f.search_field :titulo_cont %>
+            
+          <div class="form-group">
+
+          	<label>Region</label>
+          </br>
+                
+         <%= f.select(:region_cont, options_for_select([['Metropolitana', 'Metropolitana']]),{} , { 'data-width' => "50%", class: "selectpicker show-tick"} ) %>
+
+
+
+          </div>
+          <div class="form-group">
+             <label >Comuna &nbsp; </label>
+                    
+     <%= f.select(:comuna_cont, options_for_select([['Macul', 'Macul'], ['San Bernardo', 'San Bernardo'],['Nuñoa', 'Nuñoa']]),{} , {class: 'selectpicker' ,data: {"live-search": true}} ) %>
+          </div>
+          <div class="form-group">
+
+          	  <label>Tipo &nbsp;</label>
+                   
+            <%= f.select(:tipo_cont, options_for_select([['Casa', 'Casa'], ['Departamento', 'Departamento'],['Parcela', 'Parcela']]),{} , {class: 'selectpicker show-tick'}) %>
+            
+          </div>
+
+           <div class="form-group">
+
+          <label >Dormitorios</label>
+             
+                         <%= f.select(:dormitorio, options_for_select([['1 dormitorio', '1'], ['2 dormitorios', '2'],['3 dormitorios', '3'],['4 o mas dormitorios', '4']]),{} , {class: 'selectpicker show-tick'} ) %>
+
+             </div>
+
+             <div class="form-group">
+
+             	<label>Baños</label>
+                    
+                         <%= f.select(:baño, options_for_select([['1 baño', '1 baño'], ['2 baños', '2'],['3 baños', '3'],['4 o mas baños', '4']]),{} , {class: 'selectpicker show-tick'} ) %>
+
+             </div>
+
+             <div class="form-group">
+             	<label>Estacionamientos</label>
+
+                  
+                        <%= f.select(:estacionamiento, options_for_select([['1 estacionamiento', '1'], ['2 estacionamientos', '2'],['3 o mas estacionamientos', '3'],['No tiene', '0']]),{} , {class: 'selectpicker show-tick'} ) %>
+
+             </div>
+
+
+
+          <%= f.submit %>
+         
+        </form>
+      </div>
+    </div>
+	</div>
+</div>
+
+
+
+
+
+<% end %>
+
+</div>
+</div>
+
+
+
+<div class="col-md-9 ">
+
+
+
+<% @publications.each do |publication| %>
+
+<div class="row">
+                        <div class="col-md-10">
+
+
+
+
+                            <div class="sales">
+
+                            	<div class="col-md-5">
+                            	
+                                <h2> <%= link_to publication.titulo, publication %> </h2>
+                            </br>
+
+                            <%= publication.region %>
+                             </br>
+                             <%= publication.comuna %>
+                              </br>
+                              </br>
+                              </br>
+                              </br>
+                                <%= publication.display_day_published %> 
+
+                                 
+
+                            </div>
+
+                            <div class="col-md-3">
+
+                                <%= link_to (image_tag publication.image.url(:thumb)), publication %>
+
+
+
+
+                            </div>
+
+                            <h2> $ <%= publication.precio %> </h2>
+                            </br>
+                            </br>
+
+                            Dormitorios : <%= publication.dormitorio %>
+                             </br>
+                             Baños : <%= publication.baño %>
+                         </br>
+                            Estacionamientos : <%= publication.estacionamiento %>
+
+                        
+
+
+                            
+                            </br>
+                            </br>
+                            </br>
+
+
+                                  
+
+                                   
+
+                               
+
+
+                                    
+                                
+                            </div>
+                        </div>
+                        
+
+
+                            
+                      </div>
+
+                      <%end%>
+
+
+
+
+
+
+
+
+
+
+
+            
+              
+
+
+
+
+
+
+
+</div>
+
+ <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+                 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js"></script>
+          <script type="text/javascript">
+               $(document).ready(function() {
+               $('.selectpicker').selectpicker();
+              });
+          </script>
+
+</body>
+</html>
+
 
 
  
 
-  <%= render @publications %>
+
 
 
  
