--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -203,6 +203,43 @@ color: #999;
 
   </br>
   </br>
+
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-5">
+            <div class="well well-sm">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <img src="https://mamicenter.com/images/profile/generic-login.png" alt="" class="img-rounded img-responsive" />
+                    </div>
+                    <div class="col-sm-6 col-md-8">
+                        <h4>
+
+                            <%= image_tag("profile.png",size: "20x20") %>   <%= @publication.user.nombre %></h4>
+                        <small><cite > <%= image_tag("gps.png",size: "15x15") %> <%= @publication.user.comuna %>,<%= @publication.user.region %> 
+                        </i></cite></small>
+                        <p>
+                             <%= image_tag("mail.png",size: "20x20") %>  <%= @publication.user.email %>
+                            <br />
+                            <%= image_tag("phone.png",size: "20x20") %>  <%= @publication.user.fono %>
+                            <br />
+                             
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</br>
+
+
+
+
+
   
   <div class="container">
    
@@ -238,7 +275,9 @@ color: #999;
               </div>
               <span class="review-no">41 reviews</span>
             </div>
+            <div class="col-md-7"
             <p class="product-description"><%= @publication.descripcion %></p>
+          </div>
             <h4 class="price">Precio: <span> <%= @publication.precio %>$</span></h4>
             <p class="vote"><strong><%= @publication.region %></strong> - <%= @publication.comuna %></p>
 
@@ -294,33 +333,6 @@ color: #999;
 
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="well well-sm">
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <img src="https://mamicenter.com/images/profile/generic-login.png" alt="" class="img-rounded img-responsive" />
-                    </div>
-                    <div class="col-sm-6 col-md-8">
-                        <h4>
-
-                            <%= image_tag("profile.png",size: "20x20") %>   <%= @publication.user.nombre %></h4>
-                        <small><cite > <%= image_tag("gps.png",size: "15x15") %> <%= @publication.user.comuna %>,<%= @publication.user.region %> 
-                        </i></cite></small>
-                        <p>
-                             <%= image_tag("mail.png",size: "20x20") %>  <%= @publication.user.email %>
-                            <br />
-                            <%= image_tag("phone.png",size: "20x20") %>  <%= @publication.user.fono %>
-                            <br />
-                             
-                       
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 
