--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -296,6 +296,8 @@ a {
                          </br>
                             Estacionamientos : <%= publication.estacionamiento %>
 
+                            <td><%= link_to 'Eliminar', publication, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
                         
 
 
