--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -71,18 +71,26 @@
               
                  <div class="row">
 
-                <div class="col-xs-6">
-                    <label >Imagen</label>
-                   
-                   
-              <%= f.file_field :image %>
-              </div>
+                <div class="col-xs-6"> 
+
+    <%= f.fields_for :publication_attachments do |p| %>
+     <div class="field">
+       <%= p.label :avatar %><br>
+       <%= p.file_field :avatar, :multiple => true, name: "publication_attachments[avatar][]" %>
+     </div>
+
+     <% end %>
                
                </div>
+
+
 
            
 
                 </br>
+
+                 
+
              
               
 
