--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -260,6 +260,9 @@ a {
                             <div class="sales">
 
                             	<div class="col-md-5">
+
+
+              
                             	
                                 <h2> <%= link_to publication.titulo, publication %> </h2>
                             </br>
@@ -273,15 +276,12 @@ a {
                               </br>
                                 <%= publication.display_day_published %> 
 
-                                 
-
                             </div>
 
                             <div class="col-md-3">
 
-                                <%= link_to (image_tag publication.image.url(:thumb)), publication %>
 
-
+                                <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 150px; height: 150px;"  %>
 
 
                             </div>
