--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -240,27 +240,58 @@ color: #999;
 
 
 
-  
-  <div class="container">
+
+
+
+<div class="container">
    
       <div class="container-fliud">
         <div class="wrapper row">
           <div class="preview col-md-6">
+
+
             
             <div class="preview-pic tab-content">
-              <div class="tab-pane active" id="pic-1"><%= image_tag @publication.image.url(:large) %></div>
-              <div class="tab-pane" id="pic-2"><%= image_tag @publication.image.url(:medium) %></div>
-              <div class="tab-pane" id="pic-3"><%= image_tag @publication.image.url(:medium) %></div>
-              <div class="tab-pane" id="pic-4"><%= image_tag @publication.image.url(:medium) %></div>
-              <div class="tab-pane" id="pic-5"><%= image_tag @publication.image.url(:medium) %></div>
+              <div class="tab-pane active" id="pic-1"><%= image_tag @publication.publication_attachments.first. avatar_url %></div>
+              <div class="tab-pane" id="pic-2"><%= image_tag @publication.publication_attachments.second. avatar_url %></div>
+              <div class="tab-pane" id="pic-3"><%= image_tag @publication.publication_attachments.third. avatar_url %></div>
+              <% unless @publication.publication_attachments.fourth.nil? %>
+
+              <div class="tab-pane" id="pic-4"><%= image_tag @publication.publication_attachments.fourth. avatar_url %></div>
+
+              <%else%>
+
+              <%end%>
+
+               <% unless @publication.publication_attachments.fifth.nil? %>
+
+              <div class="tab-pane" id="pic-5"><%= image_tag @publication.publication_attachments.fifth. avatar_url %></div>
+
+              <%else%>
+
+              <%end%>
+
+
             </div>
             <ul class="preview-thumbnail nav nav-tabs">
-              <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag @publication.image.url(:thumb) %></a></li>
-              <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag @publication.image.url(:thumb) %></a></li>
-              <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag @publication.image.url(:thumb) %></a></li>
-              <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag @publication.image.url(:thumb) %></a></li>
-              <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag @publication.image.url(:thumb) %></a></li>
+              <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag @publication.publication_attachments.first. avatar_url %></a></li>
+              <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag @publication.publication_attachments.second. avatar_url %></a></li>
+              <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag @publication.publication_attachments.third. avatar_url %></a></li>
+
+              <% unless @publication.publication_attachments.fourth.nil? %>
+
+              <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag @publication.publication_attachments.fourth. avatar_url %></a></li>
+
+
+              <%end%>
+
+              <% unless @publication.publication_attachments.fifth.nil? %>
+
+              <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag @publication.publication_attachments.fifth. avatar_url %></a></li>
             </ul>
+           
+
+              <%end%>
             
           </div>
           <div class="details col-md-6">
