--- a/app/views/welcome/indexadmin.html.erb
+++ b/app/views/welcome/indexadmin.html.erb
@@ -755,12 +755,15 @@ header {
                 <div class="user-dashboard">
 
 
+                    <h1>Avisos Pendientes</h1>
+
+
                             
 
                         	<% @publications.each do |publication| %>
 
 
-                    <h1>Avisos Pendientes</h1>
+                    
                     <div class="row">
                         <div class="col-md-10 col-sm-5 col-xs-12">
 
@@ -778,7 +781,10 @@ header {
 
                             <div class="col-md-3 col-sm-5">
 
-                                <%= link_to (image_tag publication.image.url(:thumb)), publication ,class: 'img-thumbnail'%>
+                                
+
+
+                             <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 150px; height: 150px;"  %>
 
 
                             </div>
