--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -253,8 +253,12 @@ color: #999;
             
             <div class="preview-pic tab-content">
               <div class="tab-pane active" id="pic-1"><%= image_tag @publication.publication_attachments.first. avatar_url %></div>
+               <% unless @publication.publication_attachments.second.nil? %>
               <div class="tab-pane" id="pic-2"><%= image_tag @publication.publication_attachments.second. avatar_url %></div>
+              <%end%>
+              <% unless @publication.publication_attachments.third.nil? %>
               <div class="tab-pane" id="pic-3"><%= image_tag @publication.publication_attachments.third. avatar_url %></div>
+              <%end%>
               <% unless @publication.publication_attachments.fourth.nil? %>
 
               <div class="tab-pane" id="pic-4"><%= image_tag @publication.publication_attachments.fourth. avatar_url %></div>
@@ -275,8 +279,15 @@ color: #999;
             </div>
             <ul class="preview-thumbnail nav nav-tabs">
               <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag @publication.publication_attachments.first. avatar_url %></a></li>
+              <% unless @publication.publication_attachments.second.nil? %>
               <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag @publication.publication_attachments.second. avatar_url %></a></li>
+              <%end%>
+
+              <% unless @publication.publication_attachments.third.nil? %>
+
               <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag @publication.publication_attachments.third. avatar_url %></a></li>
+
+              <%end%>
 
               <% unless @publication.publication_attachments.fourth.nil? %>
 
