--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,6 +26,148 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+
+<style>
+
+
+/* font Awesome http://fontawesome.io*/
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+/* Animation.css*/
+@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);
+
+.col-item {
+  border: 1px solid #E1E1E1;
+  background: #FFF;
+  margin-bottom:12px;
+}
+.col-item .options {
+  position:absolute;
+  top:6px;
+  right:22px;
+}
+.col-item .photo {
+  overflow: hidden;
+}
+.col-item .photo .options {
+  display:none;
+}
+.col-item .photo img {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.col-item .options-cart {
+  position:absolute;
+  left:22px;
+  top:6px;
+  display:none;
+}
+.col-item .photo:hover .options,
+.col-item .photo:hover .options-cart {
+  display:block;
+  -webkit-animation: fadeIn .5s ease;
+  -moz-animation: fadeIn .5s ease;
+  -ms-animation: fadeIn .5s ease;
+  -o-animation: fadeIn .5s ease;
+  animation: fadeIn .5s ease;
+}
+.col-item .options-cart-round {
+  position:absolute;
+  left:42%;
+  top:22%;
+  display:none;
+}
+.col-item .options-cart-round button {
+  border-radius: 50%;
+  padding:14px 16px;
+  
+}
+.col-item .options-cart-round button .fa {
+  font-size:22px;
+}
+.col-item .photo:hover .options-cart-round {
+  display:block;
+  -webkit-animation: fadeInDown .5s ease;
+  -moz-animation: fadeInDown .5s ease;
+  -ms-animation: fadeInDown .5s ease;
+  -o-animation: fadeInDown .5s ease;
+  animation: fadeInDown .5s ease;
+}
+.col-item .info {
+  padding: 10px;
+  margin-top: 1px;
+}
+.col-item .price-details {
+  width: 100%;
+  margin-top: 5px;
+}
+.col-item .price-details h1 {
+  font-size: 14px;
+  line-height: 20px;
+  margin: 0;
+  float:left;
+}
+.col-item .price-details .details {
+  margin-bottom: 0px;
+  font-size:12px;
+}
+.col-item .price-details span {
+  float:right;
+}
+.col-item .price-details .price-new {
+  font-size:16px;
+}
+.col-item .price-details .price-old {
+  font-size:18px;
+  text-decoration:line-through;
+}
+.col-item .separator {
+  border-top: 1px solid #E1E1E1;
+}
+
+.col-item .clear-left {
+  clear: left;
+}
+.col-item .separator a {
+  text-decoration:none;
+}
+.col-item .separator p {
+  margin-bottom: 0;
+  margin-top: 6px;
+  text-align: center;
+}
+
+.col-item .separator p i {
+  margin-right: 5px;
+}
+.col-item .btn-add {
+  width: 60%;
+  float: left;
+}
+.col-item .btn-add a {
+  display:inline-block !important;
+}
+.col-item .btn-add {
+  border-right: 1px solid #E1E1E1;
+}
+.col-item .btn-details {
+  width: 40%;
+  float: left;
+  padding-left: 10px;
+}
+.col-item .btn-details a {
+  display:inline-block !important;
+}
+.col-item .btn-details a:first-child {
+  margin-right:12px;
+}
+
+
+
+
+
+
+</style>
 <!-- //web font -->
 </head>
 <body> 
@@ -86,27 +228,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 
  
-<% @publications.each do |publication| %>
 
-
-<div class='col-sm-6 col-lg-4'>
-  <div class="card">
-    <div class="card-topper" ><%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 350px; height: 350px;"  %></div>
-
-
-
-    <div class="card-block">
-      <h4 class="card-title"><%= link_to publication.titulo, publication %></h4>
-
-     
-      <p class="clase1"><%= publication.display_day_published %> </p>
-      <p class="card-text"><%= truncate(publication.descripcion, length: 130) %></p>
-     
-    </div>
-  </div>
-</div>
-
-<%end%>
 
 
 
@@ -117,3 +239,55 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
  
 </div>
+
+
+
+
+
+<div class="container">
+    <div class="row">
+        
+
+        <% @publications.each do |publication| %>
+        <div class="col-sm-3">
+            <article class="col-item">
+                <div class="photo">
+                    <div class="options-cart-round">
+                        <button class="btn btn-default" title="Add to cart">
+                            <span class="fa fa-shopping-cart"></span>
+                        </button>
+                    </div>
+                    <% unless publication.publication_attachments.first.nil? %>
+                    <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 200px; height: 200px;" , class:"img-responsive" %>
+                    <%end%>
+                </div>
+                <div class="info">
+                    <div class="row">
+                        <div class="price-details col-md-6">
+                            <p class="details">
+                                <%= link_to publication.titulo, publication %>
+                            </p>
+                            <h1><%= publication.display_day_published %></h1>
+                            <span class="price-new"><%= publication.precio %></span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+           
+        </div>
+
+        <%end%>
+        
+
+        </body>
+
+        <script>
+        /*Tooltip*/
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+});
+
+
+        </script>
+
+        </html>
