Detalles varios front

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -23,6 +23,14 @@ ul{
 	padding:0;
 }
 
+
+
+.center-mis{
+  width: 1px;
+  width: auto;
+  white-space: nowrap;
+}
+
 .regisfloat{
   float: left;
 }
