--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,15 +25,19 @@
     <link rel="stylesheet" href="http://caseyscarborough.github.io/github-activity/github-activity-0.1.0.min.css">
     
 <style>
-/*   
- * Template Name: Developer - Responsive Website Template for Developers
- * Version: 1.0
- * Author: 3rd Wave Media
- * Twitter: @3rdwave_themes
- * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
-*/
-/* ======= Base ======= */
+
+
+
+   body
+        {
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed;
+            background-size: cover;
+            padding: 15px;
+            margin: 0;
+        }  
+
+      
+
 body {
   font-family: 'Lato', arial, sans-serif;
   color: #434343;
