--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,8 +16,13 @@
 <style>
 
 body{
-    background-color:#767676;
-
+     
+        
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed;
+            background-size: cover;
+            padding: 15px;
+            margin: 0;
+          
   
 
 }
