--- a/app/views/pages/misavisos.html.erb
+++ b/app/views/pages/misavisos.html.erb
@@ -3,6 +3,35 @@
 <html>
   <head>
 
+    <style>
+
+    body
+        {
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed;
+            background-size: cover;
+            padding: 15px;
+            margin: 0;
+        }  
+
+
+
+
+       td
+          {
+
+           width: 40px;
+           text-align: left;
+          }
+
+
+          h4
+          {
+            text-align: left;
+          }
+
+
+
+        </style> 
 
 
 
@@ -25,11 +54,11 @@
                     </div>
 
  
-
+<div class="section">
  <% @publications.each do |publication| %>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<div class="section">
+
+
          
         <div class="section">
             <div class="container">
@@ -46,18 +75,30 @@
                         <table class="table table-hover table-striped">
                             <tbody>
                                 <tr>
-                                    <td>
-                                      </br>
-                                      </br>
-                                        <a href="#"><i class="-alt fa fa-2x fa-eye fa-fw"></i></a>
+
                                     </td>
                                     <td>
+
+                                    </td>
+                                    <td>
+                                    <td>
+                                        <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 150px; height: 150px;" , class:"img-circle"%>
+                                    </td>
+                                      
+                                    
+
+                                    <td>
+
                                        </br>
+
+                                       
                                         
                                         <h4>
                                             <b><%= publication.titulo %></b>
                                         </h4>
                                         <p><%= publication.display_day_published %></p>
+                                       
+
                                     </td>
                                     <td>
                                          
@@ -65,10 +106,14 @@
                                     <td>
 
                                       </br>
+
+                                      
                                         <h4>
                                             <b>Visitas  </b>
                                         </h4>
                                         <a> $ <%= publication.precio %></a>
+
+                                  
                                     </td>
                                     <td></td>
                                     <td>
@@ -76,8 +121,9 @@
                                         </br>
                                         </br>
                                           
-                                                 <%= link_to (image_tag("delete.png",size: "30x30")), publication ,method: :delete%>
-                                                <%= link_to (image_tag("edit.png",size: "30x30")),  edit_publication_path(publication) ,:method => :get%>
+                                                   <%= button_to 'Eliminar', publication, method: :delete, class:"btn btn-primary",data: { confirm: 'Are you sure?' } %>
+                                               </br>
+                                                <%= link_to "Editar", edit_publication_path(publication) ,class:"btn btn-primary",:method => :get%>
 
                                         </div>
                                     </td>
@@ -89,81 +135,7 @@
                 </div>
             </div>
         </div>
-        <div class="fade modal" id="usuario">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h2 class="modal-title" id="myModalLabel">Nuevo Usuario</h2>
-                    </div>
-                    <div class="modal-body">
-                        <form class="form-horizontal">
-                            <fieldset>
-                                <!-- Form Name -->
-                                <!-- Prepended text-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="prependedtext">Usuario</label>
-                                    <div class="col-md-5">
-                                        <div class="input-group">
-                                            <span class="input-group-addon">@</span>
-                                            <input id="prependedtext" name="prependedtext" class="form-control" placeholder="Nombre de usuario" type="text" required="">
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Prepended text-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="nombre">Nombre</label>
-                                    <div class="col-md-5">
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <i class="fa fa-user"></i>
-                                            </span>
-                                            <input id="nombre" name="nombre" class="form-control" placeholder="Nombre Completo" type="text" required="">
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Appended Input-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="email">e-mail</label>
-                                    <div class="col-md-5">
-                                        <div class="input-group">
-                                            <input id="email" name="email" class="form-control" placeholder="Correo Electrónico" type="email" required="">
-                                            <span class="input-group-addon">
-                                                <i class="fa fa-envelope"></i>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Select Basic -->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="departamento">Departamento</label>
-                                    <div class="col-md-5">
-                                        <select id="departamento" name="departamento" class="form-control">
-                                            <option value="1">Sistemas</option>
-                                            <option value="2">Ama de Llaves</option>
-                                            <option value="3">Recursos Humanos</option>
-                                            <option value="4">Contraloría</option>
-                                            <option value="5">Gerencia</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <!-- File Button -->
-                                <!-- Password input-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="password">Contraseña</label>
-                                    <div class="col-md-5">
-                                        <input id="password" name="password" type="password" placeholder="Contraseña" class="form-control input-md" required="">
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">
-                                        <i class="fa fa-fw fa-save"></i>Guardar</button>
-                                </div>
-                                <!-- Button -->
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     
 
 
