--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
 
+    <style>
+
+    body
+        {
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed;
+            background-size: cover;
+            padding: 15px;
+            margin: 0;
+        }  
+
+        </style> 
 
 
     </head>
@@ -26,7 +37,15 @@
 <%= form_for publication, html: { multipart: true } do |f| %>
   <% if publication.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(publication.errors.count, "error") %> prohibited this publication from being saved:</h2>
+      <% if publication.errors.count == 1 %>
+      <h2> 1 Error no permite que la publicacion se realice:</h2> 
+
+
+      <%else%>
+
+      <h2><%=publication.errors.count%> errores no permiten que la publicacion se realice:</h2>
+
+      <%end%>
 
       <ul>
       <% publication.errors.full_messages.each do |message| %>
