--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,164 +16,535 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="css/style.css" rel='stylesheet' type='text/css' /> 
-<link rel="stylesheet" href="css/smoothbox.css" type='text/css' >
-<!-- //Custom Theme files -->
-<!-- js -->
-<script src="js/jquery.min.js"></script>
-<!-- //js -->
-<!-- web font -->
-<link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+
 
 <style>
+        
+
+        /* font Awesome http://fontawesome.io*/
+        @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+        /* Animation.css*/
+        @import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);        
+
+        body
+        {
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed;
+            background-size: cover;
+            padding: 15px;
+            margin: 0;
+        }        
+
+        .wrap
+        {
+            width: 100%;
+            height: 100%;
+            min-height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 99;
+        }        
+
+        p.form-title
+        {
+            font-family: 'Open Sans' , sans-serif;
+            font-size: 20px;
+            font-weight: 600;
+            text-align: center;
+            color: #FFFFFF;
+            margin-top: 5%;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+        }        
+
+        form
+        {
+            width: 250px;
+            margin: 0 auto;
+        }        
+
+        .claseform
+        {
+            width: 100%;
+            margin: 0;
+            padding: 5px 10px;
+            background: 0;
+            border: 0;
+            border-bottom: 1px solid #FFFFFF;
+            outline: 0;
+            font-style: italic;
+            font-size: 18px;
+            font-weight: 400;
+            letter-spacing: 1px;
+            margin-bottom: 5px;
+            color: white;
+            outline: 0;
+        }        
+
+        form.login input[type="submit"]
+        {
+            width: 100%;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: 500;
+            margin-top: 16px;
+            outline: 0;
+            cursor: pointer;
+            letter-spacing: 1px;
+        }        
+
+        form.login input[type="submit"]:hover
+        {
+            transition: background-color 0.5s ease;
+        }        
+
+        form.login .remember-forgot
+        {
+            float: left;
+            width: 100%;
+            margin: 10px 0 0 0;
+        }
+        form.login .forgot-pass-content
+        {
+            min-height: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        form.login label, form.login a
+        {
+            font-size: 12px;
+            font-weight: 400;
+            color: #FFFFFF;
+        }        
+
+        form.login a
+        {
+            transition: color 0.5s ease;
+        }        
+
+        form.login a:hover
+        {
+            color: #2ecc71;
+        }        
+
+        .pr-wrap
+        {
+            width: 100%;
+            height: 100%;
+            min-height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 999;
+            display: none;
+        }        
+
+        .show-pass-reset
+        {
+            display: block !important;
+        }        
+
+        .pass-reset
+        {
+            margin: 0 auto;
+            width: 250px;
+            position: relative;
+            margin-top: 22%;
+            z-index: 999;
+            background: #FFFFFF;
+            padding: 20px 15px;
+        }        
+
+        .pass-reset label
+        {
+            font-size: 12px;
+            font-weight: 400;
+            margin-bottom: 15px;
+        }        
+
+        .pass-reset input[type="email"]
+        {
+            width: 100%;
+            margin: 5px 0 0 0;
+            padding: 5px 10px;
+            background: 0;
+            border: 0;
+            border-bottom: 1px solid #000000;
+            outline: 0;
+            font-style: italic;
+            font-size: 12px;
+            font-weight: 400;
+            letter-spacing: 1px;
+            margin-bottom: 5px;
+            color: #000000;
+            outline: 0;
+        }        
+
+        .labelblanco{
+          color: white;
+        }
+        .pass-reset input[type="submit"]
+        {
+            width: 100%;
+            border: 0;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: 500;
+            margin-top: 10px;
+            outline: 0;
+            cursor: pointer;
+            letter-spacing: 1px;
+        }        
+
+        .pass-reset input[type="submit"]:hover
+        {
+            transition: background-color 0.5s ease;
+        }
+        .posted-by
+        {
+            position: absolute;
+            bottom: 26px;
+            margin: 0 auto;
+            color: #FFF;
+            background-color: rgba(0, 0, 0, 0.66);
+            padding: 10px;
+            left: 45%;
+        }        
+        
+        
+
+        .col-item {
+          border: 1px solid #E1E1E1;
+          background: #FFF;
+          margin-bottom:12px;
+        }
+        .col-item .options {
+          position:absolute;
+          top:6px;
+          right:22px;
+        }
+        .col-item .photo {
+          overflow: hidden;
+        }
+        .col-item .photo .options {
+          display:none;
+        }
+        .col-item .photo img {
+          margin: 0 auto;
+          width: 100%;
+        }        
+
+        .col-item .options-cart {
+          position:absolute;
+          left:22px;
+          top:6px;
+          display:none;
+        }
+        .col-item .photo:hover .options,
+        .col-item .photo:hover .options-cart {
+          display:block;
+          -webkit-animation: fadeIn .5s ease;
+          -moz-animation: fadeIn .5s ease;
+          -ms-animation: fadeIn .5s ease;
+          -o-animation: fadeIn .5s ease;
+          animation: fadeIn .5s ease;
+        }
+        .col-item .options-cart-round {
+          position:absolute;
+          left:42%;
+          top:22%;
+          display:none;
+        }
+        .col-item .options-cart-round button {
+          border-radius: 50%;
+          padding:14px 16px;
+          
+        }
+        .col-item .options-cart-round button .fa {
+          font-size:22px;
+        }
+        .col-item .photo:hover .options-cart-round {
+          display:block;
+          -webkit-animation: fadeInDown .5s ease;
+          -moz-animation: fadeInDown .5s ease;
+          -ms-animation: fadeInDown .5s ease;
+          -o-animation: fadeInDown .5s ease;
+          animation: fadeInDown .5s ease;
+        }
+        .col-item .info {
+          padding: 10px;
+          margin-top: 1px;
+        }
+        .col-item .price-details {
+          width: 100%;
+          margin-top: 5px;
+        }
+        .col-item .price-details h1 {
+          font-size: 14px;
+          line-height: 20px;
+          margin: 0;
+          float:left;
+        }
+        .col-item .price-details .details {
+          margin-bottom: 0px;
+          font-size:12px;
+        }
+        .col-item .price-details span {
+          float:right;
+        }
+        .col-item .price-details .price-new {
+          font-size:16px;
+        }
+        .col-item .price-details .price-old {
+          font-size:18px;
+          text-decoration:line-through;
+        }
+        .col-item .separator {
+          border-top: 1px solid #E1E1E1;
+        }        
+
+        .col-item .clear-left {
+          clear: left;
+        }
+        .col-item .separator a {
+          text-decoration:none;
+        }
+        .col-item .separator p {
+          margin-bottom: 0;
+          margin-top: 6px;
+          text-align: center;
+        }        
+
+        .col-item .separator p i {
+          margin-right: 5px;
+        }
+        .col-item .btn-add {
+          width: 60%;
+          float: left;
+        }
+        .col-item .btn-add a {
+          display:inline-block !important;
+        }
+        .col-item .btn-add {
+          border-right: 1px solid #E1E1E1;
+        }
+        .col-item .btn-details {
+          width: 40%;
+          float: left;
+          padding-left: 10px;
+        }
+        .col-item .btn-details a {
+          display:inline-block !important;
+        }
+        .col-item .btn-details a:first-child {
+          margin-right:12px;
+        }        
 
 
-/* font Awesome http://fontawesome.io*/
-@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-/* Animation.css*/
-@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);
 
-.col-item {
-  border: 1px solid #E1E1E1;
-  background: #FFF;
-  margin-bottom:12px;
-}
-.col-item .options {
-  position:absolute;
-  top:6px;
-  right:22px;
-}
-.col-item .photo {
-  overflow: hidden;
-}
-.col-item .photo .options {
-  display:none;
-}
-.col-item .photo img {
-  margin: 0 auto;
-  width: 100%;
+
+
+
+/*
+* @subsection Shop
+*/
+.product {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.col-item .options-cart {
-  position:absolute;
-  left:22px;
-  top:6px;
-  display:none;
-}
-.col-item .photo:hover .options,
-.col-item .photo:hover .options-cart {
-  display:block;
-  -webkit-animation: fadeIn .5s ease;
-  -moz-animation: fadeIn .5s ease;
-  -ms-animation: fadeIn .5s ease;
-  -o-animation: fadeIn .5s ease;
-  animation: fadeIn .5s ease;
-}
-.col-item .options-cart-round {
-  position:absolute;
-  left:42%;
-  top:22%;
-  display:none;
-}
-.col-item .options-cart-round button {
-  border-radius: 50%;
-  padding:14px 16px;
-  
-}
-.col-item .options-cart-round button .fa {
-  font-size:22px;
-}
-.col-item .photo:hover .options-cart-round {
-  display:block;
-  -webkit-animation: fadeInDown .5s ease;
-  -moz-animation: fadeInDown .5s ease;
-  -ms-animation: fadeInDown .5s ease;
-  -o-animation: fadeInDown .5s ease;
-  animation: fadeInDown .5s ease;
-}
-.col-item .info {
-  padding: 10px;
-  margin-top: 1px;
-}
-.col-item .price-details {
-  width: 100%;
-  margin-top: 5px;
-}
-.col-item .price-details h1 {
-  font-size: 14px;
-  line-height: 20px;
-  margin: 0;
-  float:left;
-}
-.col-item .price-details .details {
-  margin-bottom: 0px;
-  font-size:12px;
-}
-.col-item .price-details span {
-  float:right;
-}
-.col-item .price-details .price-new {
-  font-size:16px;
-}
-.col-item .price-details .price-old {
-  font-size:18px;
-  text-decoration:line-through;
-}
-.col-item .separator {
-  border-top: 1px solid #E1E1E1;
+.product .caption {
+  margin-top: 15px;
 }
 
-.col-item .clear-left {
-  clear: left;
+.product .caption h6 {
+  color: #455a64;
 }
-.col-item .separator a {
-  text-decoration:none;
+
+.product .caption .price + .price {
+  margin-left: 15px;
 }
-.col-item .separator p {
-  margin-bottom: 0;
-  margin-top: 6px;
+
+.product.tumbnail {
+  box-shadow: 0 5px 25px 0 transparent;
+  transition: 0.3s linear;
+  padding-top: 0;
+}
+
+.product.tumbnail img:hover {
+  box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.2);
+}
+
+.single-product span {
+  display: inline-block;
+}
+
+.single-product .rating .fa-star, .single-product .rating .fa-star-o {
+  font-size: 16px;
+  color: #f7d4a0;
+  margin-left: 2px;
+}
+
+.single-product .rating + * {
+  margin-left: 15px;
+}
+
+.single-product h1.h1-variant-2 {
+  margin-bottom: 20px;
+}
+
+.single-product .caption:before {
+  content: '';
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.single-product .caption span {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.single-product .caption .price {
+  font-weight: 400;
+}
+
+.single-product .caption .price.sale {
+  color: #e75854;
+  font-size: 33px;
+}
+
+.single-product .caption * + .price {
+  margin-left: 10.8%;
+}
+
+@media (max-width: 1199px) {
+  .single-product .caption * + .price {
+    margin-left: 7.8%;
+  }
+}
+
+.single-product .caption * + .quantity {
+  margin-left: 26px;
+}
+
+.single-product .caption .info-list {
+  border-bottom: 1px solid #f3f3ed;
+  border-top: 1px solid #f3f3ed;
+  font-family: Montserrat, sans-serif;
+  padding-top: 26px;
+  padding-bottom: 26px;
+  text-align: left;
+}
+
+.single-product .caption .info-list dt, .single-product .caption .info-list dd {
+  display: inline-block;
+  line-height: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.single-product .caption .info-list dt {
+  letter-spacing: 0.08em;
+  font-size: 12px;
+  color: #a7b0b4;
+  width: 35%;
+  text-transform: uppercase;
+}
+
+.single-product .caption .info-list dd {
+  font-size: 15px;
+  color: #565452;
+  width: 62.5%;
+}
+
+.single-product .caption .share span.small {
+  margin-top: 9px;
+}
+
+@media (max-width: 991px) {
+  .single-product .caption .share span.small {
+    display: block;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .single-product .table-mobile tr {
+    padding-top: 0;
+  }
+  .single-product .table-mobile tr:before {
+    display: none;
+  }
+}
+
+.price {
+  display: inline-block;
+  font-size: 15px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+  color: #2b2f3e;
+}
+
+.price.sale {
+  color: #e75854;
+}
+
+.price del {
+  color: #b0bec5;
+}
+
+.quantity {
   text-align: center;
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  background: #eceff1;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 82px;
+  height: auto;
+  display: inline-block;
 }
 
-.col-item .separator p i {
-  margin-right: 5px;
+.quantity span {
+  display: inline-block;
 }
-.col-item .btn-add {
-  width: 60%;
-  float: left;
+
+.quantity .num {
+  width: 26px;
 }
-.col-item .btn-add a {
-  display:inline-block !important;
+
+.quantity [class*='fa-'] {
+  padding-top: 4px;
+  width: 22px;
+  padding-bottom: 4px;
+  color: #b0bec5;
+  cursor: pointer;
 }
-.col-item .btn-add {
-  border-right: 1px solid #E1E1E1;
-}
-.col-item .btn-details {
-  width: 40%;
-  float: left;
-  padding-left: 10px;
-}
-.col-item .btn-details a {
-  display:inline-block !important;
-}
-.col-item .btn-details a:first-child {
-  margin-right:12px;
+
+.quantity [class*='fa-']:hover {
+  color: #455a64;
 }
 
 
 
 
-
-
+        
 </style>
-<!-- //web font -->
+
+
+
 </head>
 <body> 
+
+
 	<div class="w3ls-banner">
+
 		<div class="center-container"> 
-			
+
 			<div class="w3ls_banner_info">
 				<div class="container">
 					<div class="w3l_banner_logo">
@@ -189,21 +560,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                      
 
 					<!-- modal-->
-					<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									Today Flats 
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
-								</div> 
-								<div class="modal-body">
-									<img src="images/17.jpg" alt=" " class="img-responsive" />
-									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem  vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
-										<i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur.</i></p>
-								</div> 
-							</div>
-						</div>
-					</div> <!-- //modal-->
+					
 				</div>
 			</div>
 		</div>
@@ -211,25 +568,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- about -->
 	
 </br>
-
-
-<div class="container">
-    <div id="notice_wrapper">
-      <% if notice %>
-        <p class="notice"><%= notice %></p>
-      <% elsif alert %>  
-        <p class="alert"><%= alert %></p>
-      <% end %>   
-    </div>
-</div>     
-<div class="container">
-
-
-
-
- 
-
-
 
 
  
@@ -242,44 +580,46 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 
 
+ <% @publications.each do |publication| %>
+<div class="container bootstrap snipets">
+  
 
+  
 
-<div class="container">
-    <div class="row">
-        
+   <div class="row flow-offset-1">
+     <div class="col-xs-6 col-md-4">
+       <div class="product tumbnail thumbnail-3"><a href="#">
 
-        <% @publications.each do |publication| %>
-        <div class="col-sm-3">
-            <article class="col-item">
-                <div class="photo">
-                    <div class="options-cart-round">
-                        <button class="btn btn-default" title="Add to cart">
-                            <span class="fa fa-shopping-cart"></span>
-                        </button>
-                    </div>
-                    <% unless publication.publication_attachments.first.nil? %>
+        <% unless publication.publication_attachments.first.nil? %>
                     <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 200px; height: 200px;" , class:"img-responsive" %>
-                    <%end%>
-                </div>
-                <div class="info">
-                    <div class="row">
-                        <div class="price-details col-md-6">
-                            <p class="details">
-                                <%= link_to publication.titulo, publication %>
-                            </p>
-                            <h1><%= publication.display_day_published %></h1>
-                            <span class="price-new"><%= publication.precio %></span>
-                        </div>
-                    </div>
-                </div>
-            </article>
-           
-        </div>
+                    <%end%></a>
 
-        <%end%>
-        
+         <div class="caption">
+           <h6><%= link_to publication.titulo, publication %></h6><span class="price">
+             <del>$24.99</del></span><span class="price sale"><%= publication.precio %></span>
+         </div>
+       </div>
+     </div>
+    
+    
 
-        </body>
+
+
+<%end%>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <script>
         /*Tooltip*/
