--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -1,23 +1,310 @@
-
 <% provide(:page_title, @publication.titulo) %>
 <% provide(:blog_active, 'active') %>
 
-
-<p id="notice"><%= notice %></p>
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta charset='utf-8'>
+
+<head>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+  <!-- META ===================================================== -->
+
+  
+
+  <!-- Favicon  ========================================== -->
+  <link rel="icon" href="favicon.ico">
+
+  <!-- CSS ====================================================== -->
+  <link rel="stylesheet" href="css/smoothproducts.css">
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+  <!-- Demo CSS (don't use) -->
+  <style type="text/css">
+
+   body
+        {
+            background: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/white-background-9.jpg') fixed !important;
+            background-size: cover !important;
+            padding: 15px !important;
+            margin: 0 !important;
+            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        }  
+ 
+
+
+
+
+  .page {
+    padding: 5px 30px 30px 30px;   /* AGRANDAMOS EL AVISO O ACHICAMOS DE ANCHO */
+    max-width: 800px;
     
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>eCommerce Product Detail</title>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
-    <style>
+    font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+ 
+  }
 
 
+  img {
+    border: none;
+  }
+  a:link,
+  a:visited {
+    color: #F0353A;
+  }
+  a:hover {
+    color: #8C0B0E;
+  }
+  ul {
+    overflow: hidden;
+  }
+  pre {
+    background: #333;
+    padding: 10px;
+    overflow: auto;
+    color: #BBB7A9;
+  }
+  .button {
+    text-decoration: none;
+    color: #F0353A;
+    border: 2px solid #F0353A;
+    padding: 6px 10px;
+    display: inline-block;
+    font-size: 18px;
+  }
+  .button:hover {
+    background: #F0353A;
+    color: #fff;
+  }
+  .demo {
+    text-align: center;
+    padding: 30px 0
+  }
+  .clear {
+    clear: both;
+  }
+
+
+
+
+  /* Needed for the lightbox */
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+/* CSS for the loading div */
+
+.sp-loading {
+  text-align: center;
+  max-width: 270px;
+  padding: 15px;
+  border: 5px solid #eee;
+  border-radius: 3px;
+  font-size: 12px;
+  color: #888;
+}
+
+/* Element wrapper */
+
+.sp-wrap {
+  display: none;
+  line-height: 0;
+  font-size: 0;
+  background: #eee;
+  border: 5px solid #eee;
+  border-radius: 3px;
+  position: relative;
+  margin: 0 25px 15px 0;
+  float: left;
+  /**************
+    Set max-width to your thumbnail width
+  ***************/
+  
+  max-width: 500px;
+}
+
+/* Thumbnails */
+
+.sp-thumbs {
+  text-align: left;
+  display: inline-block;
+}
+.sp-thumbs img {
+  min-height: 50px;
+  min-width: 50px;
+  max-width: 50px;
+}
+.sp-thumbs a:link, .sp-thumbs a:visited {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  opacity: .3;
+  display: inline-block;
+  background-size: cover;
+  background-position: center;
+  -webkit-transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -ms-transition: all .2s ease-out;
+  -o-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+}
+.sp-thumbs a:hover {
+  opacity: 1;
+}
+
+/* Styles for the currently selected thumbnail */
+
+.sp-thumbs a:active, .sp-current {
+  opacity: 1!important;
+  position: relative;
+}
+
+/* Image currently being viewed */
+
+.sp-large {
+  position: relative;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+}
+.sp-large a img {
+  max-width: 100%;
+  height: auto;
+}
+.sp-large a {
+  display: block;
+}
+
+/* Panning Zoomed Image */
+
+.sp-zoom {
+  position: absolute;
+  left: -50%;
+  top: -50%;
+  cursor: -webkit-zoom-in;
+  cursor: -moz-zoom-in;
+  cursor: zoom-in;
+  display: none;
+}
+/* Lightbox */
+
+.sp-lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, .9);
+  z-index: 500;
+  display: none;
+  cursor: pointer;
+}
+.sp-lightbox img {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 90%;
+  max-height: 90%;
+  border: 2px solid #fff;
+}
+#sp-prev, #sp-next {
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+  z-index: 501;
+  color: #fff;
+  padding: 14px;
+  text-decoration: none;
+  background: #000;
+  border-radius: 25px;
+  border: 2px solid #fff;
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
+  transition: .2s;
+}
+#sp-prev {
+  left: 10px;
+}
+#sp-prev:before {
+  content: '';
+  border: 7px solid transparent;
+  border-right: 15px solid #fff;
+  position: absolute;
+  top: 16px;
+  left: 7px;
+}
+#sp-next {
+  right: 10px;
+}
+#sp-next:before {
+  content: '';
+  border: 7px solid transparent;
+  border-left: 15px solid white;
+  position: absolute;
+  top: 16px;
+  left: 18px;
+}
+#sp-prev:hover, #sp-next:hover {
+  background: #444;
+}
+
+/* Tweak styles for small viewports */
+
+@media screen and (max-width: 400px) {
+  .sp-wrap {
+    margin: 0 0 15px 0;
+  }
+  #sp-prev, #sp-next {
+    top: auto;
+    margin-top: 0;
+    bottom: 25px;
+  }
+}
+
+
+.price span {
+     color: #ff9f1a; }
+
+
+ .product-description{
+  font-style: italic;
+  font-color: black;
+ }   
+
+
+  .titulo-ok
+{
+  
+  color: black;
+  font-family: 'DejaVu Sans';
+  border-bottom: 3px solid #696969;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 72px;
+  letter-spacing: 10px;
+  margin-bottom: 57px;
+  text-align: center;
+  text-indent: 24px;
+  opacity: 0.7;
+  
+}
+
+
+
+
+
+body{padding-top:30px;}
+
+.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
 
 small {
 display: block;
@@ -25,190 +312,39 @@ line-height: 1.428571429;
 color: #999;
 }
 
-
-
-    /* ////////////////////////////////// */
-
-    body {
-     font-family: 'open sans';
-     overflow-x: hidden; }
-
-     img {
-      max-width: 100%; }
-
-     .preview {
-       display: -webkit-box;
-       display: -webkit-flex;
-       display: -ms-flexbox;
-       display: flex;
-       -webkit-box-orient: vertical;
-       -webkit-box-direction: normal;
-       -webkit-flex-direction: column;
-       -ms-flex-direction: column;
-          flex-direction: column; }
-     @media screen and (max-width: 5000px) {
-     .preview {
-      margin-bottom: 20px; } }
-
-     .preview-pic {
-      -webkit-box-flex: 1;
-      -webkit-flex-grow: 1;
-       -ms-flex-positive: 1;
-          flex-grow: 1; }
-
-     .preview-thumbnail.nav-tabs {
-     border: none;
-     margin-top: 15px; }
-     .preview-thumbnail.nav-tabs li {
-     width: 18%;
-     margin-right: 2.5%; }
-     .preview-thumbnail.nav-tabs li img {
-      max-width: 100%;
-      display: block; }
-     .preview-thumbnail.nav-tabs li a {
-      padding: 0;
-      margin: 0; }
-     .preview-thumbnail.nav-tabs li:last-of-type {
-      margin-right: 0; }
-
-     .tab-content {
-     overflow: hidden; }
-     .tab-content img {
-     width: 100%;
-     -webkit-animation-name: opacity;
-            animation-name: opacity;
-     -webkit-animation-duration: .3s;
-            animation-duration: .3s; }
-
-     .card {
-     margin-top: 50px;
-     background: #eee;
-     padding: 3em;
-     line-height: 1.5em; }
-
-     @media screen and (min-width: 5000px) {
-     .wrapper {
-     display: -webkit-box;
-     display: -webkit-flex;
-     display: -ms-flexbox;
-     display: flex; } }
-
-     .details {
-     display: -webkit-box;
-     display: -webkit-flex;
-     display: -ms-flexbox;
-     display: flex;
-     -webkit-box-orient: vertical;
-     -webkit-box-direction: normal;
-     -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column; }
-
-     .colors {
-     -webkit-box-flex: 1;
-     -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-
-     .product-title, .price, .sizes, .colors {
-     text-transform: UPPERCASE;
-     font-weight: bold; }
-
-     .checked, .price span {
-     color: #ff9f1a; }
-
-     .product-title, .rating, .product-description, .price, .vote, .sizes {
-     margin-bottom: 15px; }
-
-     .product-title {
-      margin-top: 0; }
-
-     .size {
-     margin-right: 10px; }
-     .size:first-of-type {
-      margin-left: 40px; }
-
-     .color {
-   display: inline-block;
-   vertical-align: middle;
-   margin-right: 10px;
-   height: 2em;
-   width: 2em;
-   border-radius: 2px; }
-   .color:first-of-type {
-    margin-left: 20px; }
-
-   .add-to-cart, .like {
-   background: #ff9f1a;
-   padding: 1.2em 1.5em;
-   border: none;
-   text-transform: UPPERCASE;
-   font-weight: bold;
-   color: #fff;
-   -webkit-transition: background .3s ease;
-          transition: background .3s ease; }
-   .add-to-cart:hover, .like:hover {
-    background: #b36800;
-    color: #fff; }
-
-    .not-available {
-   text-align: center;
-   line-height: 2em; }
-   not-available:before {
-    font-family: fontawesome;
-    content: "\f00d";
-    color: #fff; }
-
-    .orange {
-    background: #ff9f1a; }
-
-   .green {
-   background: #85ad00; }
-
-   .blue {
-    background: #0076ad; }
-
-    .tooltip-inner {
-    padding: 1.3em; }
-
-    @-webkit-keyframes opacity {
-   0% {
-    opacity: 0;
-    -webkit-transform: scale(3);
-            transform: scale(3); }
-   100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-   @keyframes opacity {
-   0% {
-    opacity: 0;
-    -webkit-transform: scale(3);
-            transform: scale(3); }
-   100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-    /*# sourceMappingURL=style.css.map */
-
-    </style>
-
-  </head>
-
-
-  <body>
-
-
-  </br>
-  </br>
+.float-ok
+{
+  position:absolute;
+  left:850px;
+}
 
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-5">
+
+}
+
+
+
+  </style>
+
+</head>
+
+<body>
+  <br>
+
+
+
+
+
+  <div class="page">
+
+
+
+    <h1 class="titulo-ok"><%= @publication.titulo %></h1>
+    <div class="container float-ok">
+       <div class="row">
+    
+        <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="well well-sm">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
@@ -229,10 +365,80 @@ color: #999;
                        
                     </div>
                 </div>
-            </div>
+             </div>
         </div>
     </div>
 </div>
+
+    <div class="sp-loading"><img src="images/sp-loading.gif" alt=""><br>CARGANDO IMAGENES</div>
+    <div class="sp-wrap">
+
+      <a ><%= image_tag @publication.publication_attachments.first. avatar_url %></a>
+      <% unless @publication.publication_attachments.second.nil? %>
+      <a ><%= image_tag @publication.publication_attachments.second. avatar_url %></a>
+      <%end%>
+       <% unless @publication.publication_attachments.third.nil? %>
+      <a ><%= image_tag @publication.publication_attachments.third. avatar_url %></a>
+      <%end%>
+      <% unless @publication.publication_attachments.fourth.nil? %>
+      <a ><%= image_tag @publication.publication_attachments.fourth. avatar_url %></a>
+      <%end%>
+       <% unless @publication.publication_attachments.fifth.nil? %>
+      <a ><%= image_tag @publication.publication_attachments.fifth. avatar_url %></a>
+      <%end%>
+      
+    </div>
+
+    <h4 class="price">Precio: <span> <%= number_to_currency(@publication.precio,precision: 0,separator:".",delimiter: ".") %></span></h4>
+    <br>
+    <ul>
+      <li><%= @publication.region.nombre %></li>
+      <li><%= @publication.comuna.nombre %></li>
+      <br>
+      <h5 class="colors"><strong>Tipo:</strong>
+              <%= @publication.tipo %>
+        
+            </h5>
+
+            <h5 class="colors"><strong>Superficie:</strong>
+              <%= @publication.superficie %>
+        
+            </h5>
+
+
+            <h5 class="colors"><strong>Dormitorios:</strong>
+              <%= @publication.dormitorio %>
+        
+            </h5>
+
+              <h5 class="colors"><strong>Baños:</strong>
+              <%= @publication.baño %>
+        
+            </h5>
+
+              </h5>
+
+              <h5 class="colors"><strong>Estacionamientos:</strong>
+              <%= @publication.estacionamiento %>
+        
+            </h5>
+            <h5><strong> Descripcion:</strong> </h5>
+      <p class="product-description"><%= @publication.descripcion %></p>
+      
+    </ul>
+
+    
+</div>
+
+</br>
+
+  </div>
+  <br>
+
+
+
+
+
 
 </br>
 
@@ -243,125 +449,6 @@ color: #999;
 
 
 
-<div class="container">
-   
-      <div class="container-fliud">
-        <div class="wrapper row">
-          <div class="preview col-md-6">
-
-
-            
-            <div class="preview-pic tab-content">
-              <div class="tab-pane active" id="pic-1"><%= image_tag @publication.publication_attachments.first. avatar_url %></div>
-               <% unless @publication.publication_attachments.second.nil? %>
-              <div class="tab-pane" id="pic-2"><%= image_tag @publication.publication_attachments.second. avatar_url %></div>
-              <%end%>
-              <% unless @publication.publication_attachments.third.nil? %>
-              <div class="tab-pane" id="pic-3"><%= image_tag @publication.publication_attachments.third. avatar_url %></div>
-              <%end%>
-              <% unless @publication.publication_attachments.fourth.nil? %>
-
-              <div class="tab-pane" id="pic-4"><%= image_tag @publication.publication_attachments.fourth. avatar_url %></div>
-
-              <%else%>
-
-              <%end%>
-
-               <% unless @publication.publication_attachments.fifth.nil? %>
-
-              <div class="tab-pane" id="pic-5"><%= image_tag @publication.publication_attachments.fifth. avatar_url %></div>
-
-              <%else%>
-
-              <%end%>
-
-
-            </div>
-            <ul class="preview-thumbnail nav nav-tabs">
-              <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag @publication.publication_attachments.first. avatar_url %></a></li>
-              <% unless @publication.publication_attachments.second.nil? %>
-              <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag @publication.publication_attachments.second. avatar_url %></a></li>
-              <%end%>
-
-              <% unless @publication.publication_attachments.third.nil? %>
-
-              <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag @publication.publication_attachments.third. avatar_url %></a></li>
-
-              <%end%>
-
-              <% unless @publication.publication_attachments.fourth.nil? %>
-
-              <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag @publication.publication_attachments.fourth. avatar_url %></a></li>
-
-
-              <%end%>
-
-              <% unless @publication.publication_attachments.fifth.nil? %>
-
-              <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag @publication.publication_attachments.fifth. avatar_url %></a></li>
-            </ul>
-           
-
-              <%end%>
-            
-          </div>
-          <div class="details col-md-6">
-            <h3 class="product-title"><%= @publication.titulo %></h3>
-            <div class="rating">
-              <div class="stars">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-              </div>
-              <span class="review-no">41 reviews</span>
-            </div>
-            <div class="col-md-7"
-            <p class="product-description"><%= @publication.descripcion %></p>
-          </div>
-            <h4 class="price">Precio: <span> <%= @publication.precio %>$</span></h4>
-            <p class="vote"><strong><%= @publication.region %></strong> - <%= @publication.comuna %></p>
-
-
-            <h5 class="colors">Tipo:
-              <%= @publication.tipo %>
-        
-            </h5>
-
-            <h5 class="colors">Superficie:
-              <%= @publication.superficie %>
-        
-            </h5>
-
-
-            <h5 class="colors">Dormitorios:
-              <%= @publication.dormitorio %>
-        
-            </h5>
-
-              <h5 class="colors">Baños:
-              <%= @publication.baño %>
-        
-            </h5>
-
-              </h5>
-
-              <h5 class="colors">Estacionamientos:
-              <%= @publication.estacionamiento %>
-        
-            </h5>
-
-
-            
-
-
-            
-          </div>
-        </div>
-      
-    </div>
-  </div>
 
 
 
@@ -375,6 +462,15 @@ color: #999;
 
 
 
+  <!-- JS ======================================================= -->
+  <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="js/smoothproducts.min.js"></script>
+  <script type="text/javascript">
+  /* wait for images to load */
+  $(window).load(function() {
+    $('.sp-wrap').smoothproducts();
+  });
+  </script>
 
 
 
@@ -382,11 +478,8 @@ color: #999;
 
 
 
+</body>
 
 
-  </body>
+
 </html>
-
-
-<%= link_to 'Edit', edit_publication_path(@publication) %> |
-<%= link_to 'Back', publications_path %>
