--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@ body{
 .register-form{
       font-family: 'Open Sans Condensed', sans-serif;
     font-size: 18px;
-   left: 50%;
+   left: 45%;
     top: 75%;
     position: absolute;
     -webkit-transform: translate3d(-50%, -50%, 0);
@@ -77,8 +77,9 @@ body{
 
 
 
-.register-form label{
-    color: aliceblue;
+.register-form label{   /*COLOR LETRA */
+    color: black;
+    opacity: 0.7;
     
 }
 .register-form input{
@@ -132,6 +133,11 @@ blockquote{
 }
 
 
+.notifi-reg
+{
+  position:absolute;
+  left:1000px;
+}
 
 
 
@@ -143,27 +149,49 @@ blockquote{
 
     </head>
 
+  </br>
+
 
 
 
 
     <body>
 
- 
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %> 
+
 
 
 <div class="container">
+
+  <div class="notifi-reg">
+
+             <%= devise_error_messages! %> 
+
+           </div>
 <div class="container-fluid">
+
      <div class="register-form"> 
-      <div class="row">     
+
+      <div class="row">   
+      
+
+                         
+ 
+
+  
+          
+ 
     
 
            <div class="col-md-4 col-sm-4 col-lg-4 col-md-offset-5">
+           
 
-              <label for="firstName">NOMBRE</label>
-                   
-                    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %> 
+            
+            
+
+        
+
+                <label for="firstName">NOMBRE</label>
              
                <%= f.text_field :nombre , class:"form-control" %> 
            </div>            
