--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -531,6 +531,24 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 
 
+/* ======= Footer ======= */
+.footer {
+  background: #32383e;
+  color: #fff;
+  padding: 10px 0;
+}
+.footer .copyright {
+  line-height: 1.6;
+  color: #a1aab4;
+  font-size: 14px;
+}
+.footer a {
+  color: #fff;
+}
+.footer .fa-heart {
+  color: #fb866a;
+}
+
 
         
 </style>
@@ -580,42 +598,76 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 
 
- <% @publications.each do |publication| %>
+ 
 <div class="container bootstrap snipets">
   
-
+<% @publications.each do |publication| %>
   
 
-   <div class="row flow-offset-1">
+  
      <div class="col-xs-6 col-md-4">
-       <div class="product tumbnail thumbnail-3"><a href="#">
+       <div class="product tumbnail thumbnail-3">
 
         <% unless publication.publication_attachments.first.nil? %>
-                    <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 200px; height: 200px;" , class:"img-responsive" %>
-                    <%end%></a>
+              <%= image_tag publication.publication_attachments.first. avatar_url, :style => "width: 200px; height: 200px;" , class:"img-responsive" %>
+        <%end%>
 
          <div class="caption">
            <h6><%= link_to publication.titulo, publication %></h6><span class="price">
              <del>$24.99</del></span><span class="price sale"><%= publication.precio %></span>
          </div>
+
        </div>
+
      </div>
-    
-    
+     <%end%>
+
+     
+
+ 
 
 
 
-<%end%>
+   </div>
+
+ </div>
+
+</div>
+
+
+
+
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 
 
 
 
 
 
+</body>
+
+
+
+      <footer class="footer">
+        <div class="container text-center">
+                <small class="copyright">Creado <i class="fa fa-heart"></i> por <a href="http://themes.3rdwavemedia.com" target="_blank">Alvaro Ponce Norambuena</a> / Vendela.cl</small>
+        </div><!--//container-->
+    </footer><!--//footer-->
 
 
 
 
+
+
+        </html>
+
+  
 
 
 
@@ -629,5 +681,3 @@ $(function () {
 
 
         </script>
-
-        </html>
